--- a/src/AspNet5SQLite/project.json
+++ b/src/AspNet5SQLite/project.json
@@ -12,8 +12,10 @@
         "EntityFramework.Commands": "7.0.0-beta6-13752",
         "EntityFramework": "7.0.0-beta6-13679",
         "EntityFramework.Sqlite": "7.0.0-beta6-13752",
-        "Microsoft.Framework.Configuration.Abstractions": "1.0.0-beta6", 
-        "Microsoft.Framework.Configuration.Json": "1.0.0-beta6"
+        "Microsoft.Framework.Configuration.Abstractions": "1.0.0-beta6",
+        "Microsoft.Framework.Configuration.Json": "1.0.0-beta6",
+        "Microsoft.Framework.Logging": "1.0.0-beta6",
+        "Microsoft.Framework.Logging.Console": "1.0.0-beta6"
     },
 
     "commands": {
