--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 src/AspNet5SQLite/bower_components
+src/AspNetCoreSQLite/bower_components
